arm: Allow CPU-supported unaligned accesses This change reconfigures the CPU to allow CPU-supported unaligned accesses, which are generally faster than software-only fixups, resulting in fewer alignment exceptions.
Signed-off-by: Brent DeGraaf <bdegraaf@codeaurora.org>
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -108,6 +108,7 @@ CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
+CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_CC_GRAPHITE_OPTIMIZATION=y
