disable MEDIA_TUNER
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -381,6 +381,8 @@ CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_RC_CORE is not set
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
+# CONFIG_MEDIA_ATTACH is not set
+# CONFIG_MEDIA_TUNER is not set
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 # CONFIG_MSM_VCAP is not set
