--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -65,6 +65,7 @@ CONFIG_MSM_SMD_PKG4=y
 # CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 # CONFIG_MSM_RESET_MODEM is not set
+# CONFIG_MSM_SMD_LOGGING is not set
 CONFIG_MSM_DSPS=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
