mako_hotplug: add custom Hotplug solution
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>

Make it configurable.

Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -56,6 +56,7 @@ CONFIG_MSM_SMP=y
 CONFIG_ASMP=y
 # CONFIG_ARM_AUTO_HOTPLUG is not set
 CONFIG_DYN_HOTPLUG=y
+CONFIG_MAKO_HOTPLUG=y
 CONFIG_MACH_MSM_DUMMY=y
 CONFIG_BOARD_HEADER_FILE="mach/lge/board_mako.h"
 CONFIG_MACH_APQ8064_MAKO=y
