--- a/arch/arm/kernel/Makefile
+++ b/arch/arm/kernel/Makefile
@@ -88,3 +88,4 @@ obj-$(CONFIG_EARLY_PRINTK)	+= early_printk.o
 extra-y := $(head-y) init_task.o vmlinux.lds
 obj-$(CONFIG_ASMP)		+= autosmp.o
 
+obj-$(CONFIG_MAKO_HOTPLUG)	+= mako_hotplug.o
