--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -34,6 +34,7 @@ config ARM
 	select HAVE_C_RECORDMCOUNT
 	select HAVE_GENERIC_HARDIRQS
 	select HAVE_SPARSE_IRQ
+	select HAVE_ARCH_MMAP_RND_BITS if MMU
 	select HAVE_ARCH_SECCOMP_FILTER
 	select GENERIC_IRQ_SHOW
 	select CPU_PM if (SUSPEND || CPU_IDLE)
@@ -287,9 +288,9 @@ config ARCH_MMAP_RND_BITS_MIN
 
 config ARCH_MMAP_RND_BITS_MAX
 	int
-	default 14 if MMU && PAGE_OFFSET=0x40000000
-	default 15 if MMU && PAGE_OFFSET=0x80000000
-	default 16 if MMU
+	default 14 if PAGE_OFFSET=0x40000000
+	default 15 if PAGE_OFFSET=0x80000000
+	default 16
 	default 8
 
 config ARCH_MMAP_RND_BITS
