Add AutoSMP Hotplug.
Original by showp1984 and Mgr666, tuned by Defconoi.

Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -49,6 +49,8 @@ CONFIG_ARCH_MMAP_RND_BITS_MIN=8
 CONFIG_ARCH_MMAP_RND_BITS_MAX=16
 CONFIG_ARCH_MMAP_RND_BITS=8
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
+CONFIG_MSM_SMP=y
+CONFIG_ASMP=y
 CONFIG_MACH_MSM_DUMMY=y
 CONFIG_BOARD_HEADER_FILE="mach/lge/board_mako.h"
 CONFIG_MACH_APQ8064_MAKO=y
