--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1625,6 +1625,14 @@ config MSM_SLEEPER
 	help
 	  Limit max frequency and shut off cores while screen is off
 
+config DYN_HOTPLUG
+ 	bool "hotplug driver"
+ 	depends on HOTPLUG_CPU
+ 	default n
+ 	help
+	  The Dynamic hotplug driver by Stratos Karafotis to automatically
+	  online/offline CPUs according to load.
+
 config MSM_AVS_HW
 	bool "Enable Adaptive Voltage Scaling (AVS)"
 	default n
