--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -98,6 +98,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_DEDUCE_WAKEUP_REASONS=y
 CONFIG_PARTIALRESUME=y
+CONFIG_SPEEDUP_KEYRESUME=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_PREEMPT=y
@@ -120,6 +121,7 @@ CONFIG_NEON=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_RUNTIME=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
