--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -25,6 +25,8 @@ CONFIG_NAMESPACES=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
