--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -49,6 +49,9 @@ CONFIG_ARCH_MMAP_RND_BITS_MIN=8
 CONFIG_ARCH_MMAP_RND_BITS_MAX=16
 CONFIG_ARCH_MMAP_RND_BITS=8
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
+CONFIG_ARCH_MSM_KRAIT=y
+CONFIG_ARCH_MSM_KRAITMP=y
+CONFIG_MSM_KRAIT_WFE_FIXUP=y
 CONFIG_MSM_SMP=y
 CONFIG_ASMP=y
 CONFIG_MACH_MSM_DUMMY=y
