defconfig: enable power efficient wq.
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -128,6 +128,7 @@ CONFIG_NEON=y
 # CONFIG_HAVE_AOUT is not set
 CONFIG_WAKELOCK=y
 CONFIG_PM_RUNTIME=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_NET=y
