--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -104,6 +104,7 @@ CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
+CONFIG_CC_GRAPHITE_OPTIMIZATION=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
 CONFIG_CPU_FREQ=y
