--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -37,6 +37,7 @@ CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
+CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
