defconfig: enable DYNAMIC_PAGE_WRITEBACK.
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -271,6 +271,7 @@ CONFIG_SW_SYNC=y
 CONFIG_CONNECTOR=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_DYNAMIC_PAGE_WRITEBACK=y
 CONFIG_UID_STAT=y
 CONFIG_UID_CPUTIME=y
 CONFIG_ANDROID_VIBRATOR=y
