--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -532,6 +532,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
 CONFIG_ENABLE_DEFAULT_TRACERS=y
+CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
