defconfig: enable auto hotplug driver.
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -54,6 +54,7 @@ CONFIG_ARCH_MSM_KRAITMP=y
 CONFIG_MSM_KRAIT_WFE_FIXUP=y
 CONFIG_MSM_SMP=y
 CONFIG_ASMP=y
+CONFIG_ARM_AUTO_HOTPLUG=y
 CONFIG_DYN_HOTPLUG=y
 CONFIG_MACH_MSM_DUMMY=y
 CONFIG_BOARD_HEADER_FILE="mach/lge/board_mako.h"
