build & defconfig updates. * rename labels to 'revival-N4' * add CONFIG_PREEMPT_COUNT
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -115,6 +115,7 @@ CONFIG_SPEEDUP_KEYRESUME=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_PREEMPT=y
+CONFIG_PREEMPT_COUNT=y
 CONFIG_AEABI=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_HIGHMEM=y
