build & defconfig updates and bump up to r04. * rename labels to 'revival-N4' * Set HZ to 250 (zaclimon)
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -117,6 +117,13 @@ CONFIG_SPEEDUP_KEYRESUME=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_PREEMPT=y
+CONFIG_PREEMPT_COUNT=y
+# CONFIG_HZ_100 is not set
+CONFIG_HZ_250=y
+# CONFIG_HZ_300 is not set
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=250
+CONFIG_SCHED_HRTICK=y
 CONFIG_AEABI=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_HIGHMEM=y
