--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -131,6 +131,19 @@ config CPU_FREQ_DEFAULT_GOV_SMARTMAX
         help
           Use the CPUFreq governor 'smartmax' as default
 
+config CPU_FREQ_DEFAULT_GOV_STOCKDEMAND
+    bool "stockdemand"
+    select CPU_FREQ_GOV_STOCKDEMAND
+    select CPU_FREQ_GOV_PERFORMANCE
+    help
+      Use the CPUFreq governor 'stockdemand' as default. This allows
+      you to get a full dynamic frequency capable system by simply
+      loading your cpufreq low-level hardware driver.
+      Be aware that not all cpufreq drivers support the ondemand
+      governor. If unsure have a look at the help section of the
+      driver. Fallback governor will be the performance governor.
+      This is default LG ondemand cpu gov.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -263,6 +276,12 @@ config CPU_FREQ_GOV_SMARTMAX
         select CPU_FREQ_TABLE
         help
           'smartmax' combined ondemand and smartass2
+
+config CPU_FREQ_GOV_STOCKDEMAND
+    tristate "'stockdemand' cpufreq policy governor"
+    select CPU_FREQ_TABLE
+    help
+      this is stock LG ondemand GOV. for users that like STOCK.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
