--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -545,6 +545,7 @@ CONFIG_TIMER_STATS=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_PID_IN_CONTEXTIDR=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
