--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -138,6 +138,8 @@ CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 # CONFIG_HAVE_AOUT is not set
+CONFIG_KSM=y
+CONFIG_KSM_CHECK_PAGE=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_RUNTIME=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
