--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -560,12 +560,13 @@ CONFIG_HAVE_KERNEL_GZIP=y
 # CONFIG_HAVE_KERNEL_LZMA is not set
 # CONFIG_HAVE_KERNEL_XZ is not set
 # CONFIG_HAVE_KERNEL_LZO is not set
-# CONFIG_HAVE_KERNEL_LZ4 is not set
+CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
-# CONFIG_KERNEL_LZ4 is not set
+CONFIG_KERNEL_LZ4=y
+CONFIG_RD_LZ4=y
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
