--- a/arch/arm/configs/hellspawn_mako_defconfig
+++ b/arch/arm/configs/hellspawn_mako_defconfig
@@ -132,6 +132,7 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_HELLSACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_STOCKDEMAND=y
+CONFIG_CPU_FREQ_GOV_YANKDEMAND=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
