defconfig: updates. * DEFAULT_IOSCHED="tripndroid" * AIO_SSD_ONLY
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -41,7 +41,9 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_TRIPNDROID=y
-CONFIG_DEFAULT_NOOP=y
+CONFIG_DEFAULT_TRIPNDROID=y
+CONFIG_DEFAULT_IOSCHED="tripndroid"
+# CONFIG_DEFAULT_NOOP is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -529,6 +531,7 @@ CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
 CONFIG_MSM_IOMMU=y
 CONFIG_AIO_OPTIMIZATION=y
+CONFIG_AIO_SSD_ONLY=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
