--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -41,9 +41,8 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_TRIPNDROID=y
-CONFIG_DEFAULT_TRIPNDROID=y
 CONFIG_DEFAULT_IOSCHED="tripndroid"
-# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
