Add Latest Version of Alucard HotPlug.
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -402,3 +402,5 @@ obj-$(CONFIG_CPU_FREQ_MSM) += cpufreq.o
 
 obj-$(CONFIG_HAS_MACH_MEMUTILS) += memutils/
 
+obj-$(CONFIG_ALUCARD_HOTPLUG) += alucard_hotplug.o
+
