--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -57,6 +57,8 @@ CONFIG_MSM_SMP=y
 CONFIG_ASMP=y
 CONFIG_DYN_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_ALUCARD_HOTPLUG_USE_RQ_STATS=y
 CONFIG_MACH_MSM_DUMMY=y
 CONFIG_BOARD_HEADER_FILE="mach/lge/board_mako.h"
 CONFIG_MACH_APQ8064_MAKO=y
