--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -41,7 +41,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_TRIPNDROID=y
-CONFIG_DEFAULT_IOSCHED="tripndroid"
+CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
