defconfig: disable CPU governors being incompatible with this kernel.
Signed-off-by: spezi77 <spezi77@gmx.com>

--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -140,10 +140,10 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
-CONFIG_CPU_FREQ_GOV_HELLSACTIVE=y
+# CONFIG_CPU_FREQ_GOV_HELLSACTIVE is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_STOCKDEMAND=y
-CONFIG_CPU_FREQ_GOV_YANKDEMAND=y
+# CONFIG_CPU_FREQ_GOV_STOCKDEMAND is not set
+# CONFIG_CPU_FREQ_GOV_YANKDEMAND is not set
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
