--- a/arch/arm/configs/revival_mako_defconfig
+++ b/arch/arm/configs/revival_mako_defconfig
@@ -144,6 +144,7 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_STOCKDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_YANKDEMAND is not set
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
